# pdf-gpt-team-prj-api

./: README.md  build.sh  pyproject.toml  render.yaml
chat/: __init__.py  consumers.py  routing.py  views.py
chat/conversations/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
chat/conversations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_rename_name_conversation_title.py  0005_alter_conversation_last_message.py  0006_conversation_embed_url_alter_conversation_pdf_url.py  0007_conversation_charges_conversation_tokens.py
chat/messages/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
chat/messages/migrations/: 0001_initial.py  0002_rename_message_message_text.py  0003_alter_message_type.py  0004_rename_type_message_role.py
common/: models.py  utils.py
config/: asgi.py  authentication.py  settings.py  urls.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_claude_key_user_llm_type_user_openai_key.py  0003_alter_user_claude_key_alter_user_openai_key.py
utils/: jwt_utils.py  tests.py
